modified for debug

--- a/examples/Jigsaw in IPython.ipynb
+++ b/examples/Jigsaw in IPython.ipynb
@@ -26,10 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from metakernel import register_ipython_magics\n",
@@ -46,9 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "x = 42"
@@ -57,9 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def myfunc(a, b):\n",
@@ -80,10 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -235,7 +227,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe src=\"workspace1.html\" width=\"100%\" height=\"350\" style=\"resize: both; overflow: auto;\"></iframe>"
+       "<iframe src=\"workspace11.html\" width=\"100%\" height=\"350\" style=\"resize: both; overflow: auto;\"></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -243,17 +235,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "output",
-     "output_type": "stream",
-     "text": [
-      "42\n"
-     ]
     }
    ],
    "source": [
-    "%jigsaw Python --workspace workspace1"
+    "#%jigsaw Python --workspace workspace1\n",
+    "%jigsaw Python --workspace workspace11"
    ]
   },
   {
@@ -270,9 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -488,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -516,8 +498,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -531,9 +514,27 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.0"
+   "version": "3.5.5"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
