--- a/examples/Pynquino example.ipynb
+++ b/examples/Pynquino example.ipynb
@@ -1,32 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Jigsaw in IPython\n",
-    "\n",
-    "This notebook demonstrates using the %jigsaw magic in IPython.\n",
-    "\n",
-    "Dependencies:\n",
-    "\n",
-    "1. system running IPython or Jupyter\n",
-    "2. [metakernel](https://github.com/Calysto/metakernel)\n",
-    "\n",
-    "## Overview\n",
-    "\n",
-    "Jigsaw is a combination of Google's Blockly drag-and-drop interface in the browser with Python. With Jigsaw, you can:\n",
-    "\n",
-    "* do many Python tasks in the block-only view\n",
-    "* have access to predefined Python variables\n",
-    "* create functions and variables in Jigsaw, but use them in Python cells\n",
-    "\n",
-    "To use in IPython, you need to add the metakernel magics for IPython:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,46 +11,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, let's define some Python things:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 42"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def myfunc(a, b):\n",
-    "    return a + b"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we create a Jigsaw workspace named \"workspace1\". This will create two files in this subdirectory:\n",
-    "\n",
-    "1. workspace1.html\n",
-    "2. workspace1.xml\n",
-    "\n",
-    "Once you have the Jigsaw workspace showing, then you can start dragging blocks around:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +165,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe src=\"workspace11.html\" width=\"100%\" height=\"450\" style=\"resize: both; overflow: auto;\"></iframe>"
+       "<iframe src=\"initHW.html\" width=\"100%\" height=\"450\" style=\"resize: both; overflow: auto;\"></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -235,30 +173,11 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "output",
-     "output_type": "stream",
-     "text": [
-      "ImportError: No module named 'pynq'\n"
-     ]
     }
    ],
    "source": [
     "#%jigsaw Python --workspace workspace1\n",
-    "%jigsaw Python --workspace workspace11"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pynq.overlays.base import BaseOverlay\n",
-    "base = BaseOverlay(\"base.bit\")\n",
-    "from pynq.lib.arduino import Arduino_Zsprinter\n",
-    "arduino = Arduino_Zsprinter(base.ARDUINO)\n"
+    "%jigsaw Python --workspace initHW "
    ]
   },
   {
@@ -519,9 +438,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:anaconda3-4.1.0]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-anaconda3-4.1.0-py"
   },
   "language_info": {
    "codemirror_mode": {
