--- a/examples/Pynquino example.ipynb
+++ b/examples/Pynquino example.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -181,19 +181,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"workspace1.png\"></img>\n",
-    "\n",
-    "In the above example, I pulled a print block from the Text category on the left, and a variable block from the Variables category. Snapping them together forms a valid program. I then clicked on the \"Run\" button to run the code. x got its value from the Python cell above.\n",
-    "\n",
-    "Let's create another workspace:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +335,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe src=\"workspace2.html\" width=\"100%\" height=\"350\" style=\"resize: both; overflow: auto;\"></iframe>"
+       "<iframe src=\"gcode_send.html\" width=\"100%\" height=\"450\" style=\"resize: both; overflow: auto;\"></iframe>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -354,85 +343,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "output",
-     "output_type": "stream",
-     "text": [
-      "11\n"
-     ]
     }
    ],
    "source": [
-    "%jigsaw Python --workspace workspace2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"workspace2.png\"></img>\n",
-    "\n",
-    "In the above example, I dragged the following blocks:\n",
-    "    \n",
-    "1. print from Text\n",
-    "2. expression from Python\n",
-    "3. set ... to from Variables\n",
-    "4. sqrt(2) from Math\n",
-    "\n",
-    "I had to click on the set block and create a new variable named \"sqrt_two\". I also had to click on the math constant block to change pi to sqrt(2).\n",
-    "\n",
-    "If you click on the \"Generate Python Code\" it will create a new cell below:"
+    "%jigsaw Python --workspace gcode_send "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": [
-    "import math\n",
-    "\n",
-    "\n",
-    "print((myfunc(5, 6)))\n",
-    "sqrt_two = math.sqrt(2)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you enter the variable named \"sqrt_two\" in the following cell and run it, you get as output the result from running the Jigsaw blocks:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.4142135623730951"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sqrt_two"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Try it out!"
-   ]
+   "source": []
   }
  ],
  "metadata": {
